# club-flask

./: README.md
backend/: app.py  pyproject.toml
backend/src/core/: database.py
backend/src/core/models/: usuario_model.py
backend/src/web/controllers/: auth_controller.py
backend/src/web/static/css/: login.css
backend/src/web/templates/: index.html  layout.html
backend/src/web/templates/auth/: login.html
