[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["MAXIMILIANO LEONELO FRANCESCONI <maxifni_fsa@live.com.ar>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
GitPython = "^3.1.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
