[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["MAXIMILIANO LEONELO FRANCESCONI <maxifni_fsa@live.com.ar>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
GitPython = "^3.1.29"
flask-sqlalchemy = "^3.0.2"
Flask-Session = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
